# anomaly-detection

./: .gitignore  CHANGES.md  PRE_REDESIGN_SUMMARY.md  README.md  bash.exe.stackdump  behavioral_anomalies.md  eval_metrics.md  pipeline.md  pipeline_internals.md  pipeline_visuals.md  pyproject.toml
configs/: household.yaml  household_full.yaml  leak_30d.yaml  outlet.yaml  outlet_kettle.yaml  outlet_tv.yaml  single_outlet_fridge.yaml  waterleak.yaml
docs/: METRICS.md  TUTORIAL.md
research/: BACKLOG.md  BASELINE.json  BASELINE.md  DETECTOR_CANDIDATE_SURVEY.md  DETECTOR_RESEARCH_PLAN.md  HYPOTHESES.md  ITERATIONS.md  LEARNINGS.md  PIPELINE_REDESIGN.md  README.md  START_RESEARCH.md  WORKLOAD_FINGERPRINT.json  _classify_batch.py  ambiguous_batch.json  ambiguous_classified.json  anomaly_semantics.py  apply_type_classifier.py  audit_fps.py  audit_lost_tps.py  audit_onset_timing.py  audit_workload.py  classify_ambiguous.py  event_audit.py  extract_ambiguous.py  extract_training_data.py  llm_classifier.py  merge_classified.py  nab_metric.py  nab_score_iters.py  nab_score_ml_csvs.py  run_research_eval.py  train_type_classifier.py  type_classifier_report.json
scripts/: latency_report.py  replay_demo.py  run_all_scenarios.py
tests/: conftest.py  test_adapter.py  test_aggregate_explain_scores.py  test_batch.py  test_core.py  test_detectors.py  test_explain.py  test_explain_classify.py  test_explain_signals.py  test_explain_types.py  test_features.py  test_fusion.py  test_integration_leak.py  test_integration_outlet.py  test_metrics.py  test_pipeline.py  test_profiles.py  (+3 more)
(+119 files in other folders)
